// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotPasswordForm /> page === 1 component renders correctly 1`] = `
<div>
  <ReduxForm
    email=""
    onChangeEmail={[Function]}
    onSubmit={[Function]}
  />
  <div
    className="errorContent"
  >
    this is some error text
  </div>
</div>
`;

exports[`<ForgotPasswordForm /> page === 2 component renders correctly 1`] = `
<div>
  <div>
    <ReduxForm
      code=""
      onChangeCode={[Function]}
      onSubmit={[Function]}
    />
  </div>
  <div
    className="errorContent"
  >
    this is some error text
  </div>
</div>
`;

exports[`<ForgotPasswordForm /> page === 3 component renders correctly 1`] = `
<div>
  <div>
    <ReduxForm
      code=""
      onChangeCode={[Function]}
      onSubmit={[Function]}
    />
  </div>
  <div
    className="errorContent"
  >
    this is some error text
  </div>
</div>
`;
